fix vertical layout covered tags over screen (image-collage-v3)

--- a/image-collage/v3/index.css
+++ b/image-collage/v3/index.css
@@ -232,10 +232,6 @@ body[layout='horizontal'] .expander {
 	max-height: 100%;
 }
 
-body[layout='vertical'] .menu {
-	max-height: 330px;
-}
-
 .title,
 .description {
 	margin: 10px 0;
